Bug 271976 - PPT filter crash while parsing gradient data.
Summary: PPT filter crash while parsing gradient data.
Status: RESOLVED FIXED
Alias: None
Product: calligrastage
Classification: Applications
Component: filter/ppt (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Matus Uzak
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-29 14:07 UTC by Matus Uzak
Modified: 2011-04-29 14:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
PPT test file to open in Stage. (216.00 KB, application/vnd.ms-powerpoint)
2011-04-29 14:07 UTC, Matus Uzak
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Matus Uzak 2011-04-29 14:07:44 UTC
Created attachment 59426 [details]
PPT test file to open in Stage.   

Version:           unspecified
OS:                Linux

PPT filter crashes while parsing gradients related complex data in libmso.

Reproducible: Always

Steps to Reproduce:
1. Open the attached file with Stage (kpresenter).

Actual Results:  
Filter Crash!

Expected Results:  
The attached file should be displayed in Stage, without crashing in the filter.
Comment 1 Matus Uzak 2011-04-29 14:09:06 UTC
Git commit 0148a2568765c221b65707f485a21faf6af216d3 by Matus Uzak.
Committed on 29/04/2011 at 14:14.
Pushed by uzak into branch 'master'.

libmso: Check for exceptions while parsing complex data.

BUG:271976

M  +20   -4    filters/libmso/ODrawToOdf.cpp     

http://commits.kde.org/calligra/0148a2568765c221b65707f485a21faf6af216d3