libmso: Check for exceptions while parsing complex data.

BUG:271976